--- a/src/header.css
+++ b/src/header.css
@@ -1,22 +1,24 @@
 .header{
   display: flex;
   justify-content: space-around;
-  background-color:rgb(107, 187, 107);
-  padding:10px 30px ;
- 
+  background-color:rgb(231, 234, 231);
+  padding: 4px 16px;
+ border-radius:30px ;
 }
 body{
   margin:0;
   padding:0;
 
 }
+
+
 .header ul {
   display:flex;
   list-style-type: none;
   gap:20px;
   margin:auto;
   justify-content:space-around ;
-  width: 200px;
+  width: 350px;
 }
 .header ul li{
   padding: 10px;
@@ -24,7 +26,82 @@ body{
 .header .link h2{
 margin:0;
 }
-.header .link {
+.header .link{
   text-decoration: none;
   font-size: 20px;
 }
+ .categories .link {
+  text-decoration: none;
+  font-size: 20px;
+  margin:10px;
+}
+
+.fruit-container .fruit-item {
+  display: inline-block;
+  margin: 15px;
+  padding: 15px;
+  width: 180px;
+  border-radius: 10px;
+  background-color: #f5f5f5;
+  box-shadow: 0 4px 6px rgba(130, 92, 92, 0.1);
+
+  opacity: 0;
+  transform: translateX(-40px);
+  animation: slideIn 0.6s forwards;
+}
+
+@keyframes slideIn {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fruit-container .fruit-item:hover {
+  transform: translateX(10px);
+  box-shadow: 0 6px 10px rgba(228, 215, 215, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.fruit-container img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.vegetables-container .vegetables-item {
+  display: inline-block;
+  margin: 15px;
+  padding: 15px;
+  width: 180px;
+  border-radius: 10px;
+  background-color: #ebeaea;
+  box-shadow: 0 4px 6px rgba(130, 92, 92, 0.1);
+
+  opacity: 0;
+  transform: translateX(-40px);
+  animation: slideIn 0.6s forwards;
+}
+
+
+
+.vegetables-container .vegetables-item:hover {
+  transform: translateX(10px);
+  box-shadow: 0 6px 10px rgba(100, 19, 19, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.vegetables-container img {
+  width: 120px;
+  height: 120px;
+  object-fit:cover ;
+  border-radius: 8px;
+}
+
+@keyframes slideIn{
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}  
+
+
